--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -5,6 +5,15 @@ html
     title= title
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
   body
+    .navbar.navbar-default.navbar-fixed-top
+     .container
+      .nav-bar-header
+        a.navbar-brand(href='/') Loc8r
+        button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-nav')
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+
     block content
 
     script(src='/javascripts/jquery-1.11.2.js')
