--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -13,8 +13,17 @@ html
           span.icon-bar
           span.icon-bar
           span.icon-bar
+        #navbar-main.navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li
+              a(href='/about/') About
+    .container
+      block content
 
-    block content
+      footer
+        .row
+          .col-xs-12
+            small &copy; Richard Ighodaro 2015
 
     script(src='/javascripts/jquery-1.11.2.js')
     script(src='/bootstrap/js/bootstrap.min.js')
