Updated location-info.jade file

--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -47,4 +47,13 @@ block content
         rounded(src='http://maps.googleapis.com/maps/api/staticmap?center=51.45501,-
         0.9690884&zoom=17&size=400x350&sensor=false&markers=51.455041,-0.9690884&scale=2')
         .row
-        
+          .col-xs-12
+            .panel.panel-primary.review-panel
+              .panel-heading
+                a.btn.btn-default.pull-right(href='/location/review/new') Add review
+
+                h2.panel-title Customer reviews
+              .panel-body.review-container
+                .row
+                  .review
+                    .
